Update and rename deepseek_html_20251212_bd95aa.html to index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NeuraCore AI | Enterprise AI Solutions & Cybersecurity</title>
+    <title>Jay Prasad Majhi| AI Solutions & Cybersecurit Specialist</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -925,7 +925,7 @@
                                 </div>
                                 <div>
                                     <h4 class="font-bold mb-1">Email</h4>
-                                    <a href="mailto:ai@jayprasad.com" class="text-primary-400 hover:underline">ai@jayprasad.com</a>
+                                    <a href="mailto: intelligence@jayprasad.com" class="text-primary-400 hover:underline">intelligence@jayprasad.com</a>
                                     <p class="text-sm text-gray-400 mt-1">Response within 24 hours</p>
                                 </div>
                             </div>
@@ -1048,13 +1048,13 @@
                     </div>
                     <div class="text-sm text-gray-400">
                         <p>📍 Los Angeles, CA</p>
-                        <p>📧 ai@jayprasad.com</p>
+                        <p>📧 intelligence@jayprasad.com</p>
                     </div>
                 </div>
             </div>
             
             <div class="border-t border-gray-800 mt-12 pt-8 text-center text-gray-500 text-sm">
-                <p>© 2024 NeuraCore AI. All rights reserved. | Enterprise AI Solutions & Cybersecurity</p>
+                <p>© 2025 Jay Prasad. All rights reserved. | Enterprise AI Solutions & Cybersecurity</p>
                 <p class="mt-2">Built with advanced AI architectures and secure cloud infrastructure</p>
             </div>
         </div>
