Update and rename deepseek_html_20251212_723094.html to index.html

--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
                                 </div>
                             </a>
                             
-                            <a href="https://github.com/thebijay" target="_blank" 
+                            <a href="https://github.com/thebijaay" target="_blank" 
                                class="flex items-center p-4 glass-card rounded-lg hover:bg-white/10 transition">
                                 <div class="w-10 h-10 bg-gray-800 rounded-lg flex items-center justify-center mr-3">
                                     <i class="fab fa-github text-white"></i>
@@ -587,7 +587,7 @@
                            class="w-10 h-10 glass-card rounded-lg flex items-center justify-center hover:bg-white/10">
                             <i class="fab fa-linkedin-in"></i>
                         </a>
-                        <a href="https://github.com/thebijay" target="_blank" 
+                        <a href="https://github.com/thebijaay" target="_blank" 
                            class="w-10 h-10 glass-card rounded-lg flex items-center justify-center hover:bg-white/10">
                             <i class="fab fa-github"></i>
                         </a>
