--- a/index.html
+++ b/index.html
@@ -5336,4 +5336,25 @@
         window.navigateTo = navigateTo;
     </script>
 </body>
-</html>
+</html> -add below link in websie bu no code of below link files with respective field Privacy-policy.html
+terms-of-service.html
+cookie-policy.html
+login.html
+register.html
+verify-otp.html
+admin-dashboard.html
+users.html
+api/smtp.php
+1. CSS Files:
+assets/css/loading.css 
+assets/css/main.css 
+assets/css/admin.css 
+2. JavaScript Files:
+assets/js/loading.js 
+assets/js/main.js
+assets/js/admin.js 
+assets/js/form-validation.js
+3. PHP Backend Files:
+api/smtp.php and add login button in website in footer witj login html code
+>i need html code combination of this two code and add this code links only(code are already added in github) with no above info missing nee  same but merged okay
+
