--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Meta Tags -->
     <meta name="description" content="Jay Prasad Majhi - AI Developer, Cybersecurity Specialist & IT Consultant. Certified Cybersecurity professional with 900M+ AI database expertise.">
     <meta name="keywords" content="AI Developer, Cybersecurity Expert, Machine Learning, Artificial Intelligence, Web Development, IT Consultant, Cybersecurity Certified, Python Developer, React Expert">
-    <meta name="author" content="Jay Prasad Majhi">
+    <meta name="author" content="Jay Prasad Majhi - AI Developer, Cybersecurity Specialist & IT Consultant">
     <meta property="og:title" content="Jay Prasad Majhi | AI & Cybersecurity Expert">
     <meta property="og:description" content="Leading AI Developer and Cybersecurity Specialist with global expertise.">
     <meta property="og:type" content="website">
