--- a/index.html
+++ b/index.html
@@ -923,8 +923,8 @@
               </div>
               <div>
                 <h4 class="font-bold mb-1">Primary Email</h4>
-                <a href="mailto:intelligence@jayprasad.com.np" class="text-cyan-400 hover:underline">
-                  intelligence@jayprasad.com.np
+                <a href="mailto:contact@the.jayprasad.com.np" class="text-cyan-400 hover:underline">
+                  contact@the.jayprasad.com.np
                 </a>
                 <p class="text-sm text-gray-400 mt-1">For all business inquiries</p>
               </div>
@@ -937,8 +937,8 @@
               </div>
               <div>
                 <h4 class="font-bold mb-1">Business Email</h4>
-                <a href="mailto:it@jayprasad.com.np" class="text-cyan-400 hover:underline">
-                  it@jayprasad.com.np
+                <a href="mailto:it@the.jayprasad.com.np" class="text-cyan-400 hover:underline">
+                  it@the.jayprasad.com.np
                 </a>
                 <p class="text-sm text-gray-400 mt-1">IT services & support</p>
               </div>
@@ -1107,7 +1107,7 @@
           </a>
         </li>
         <li>
-          <a href="mailto:intelligence@jayprasad.com.np" target="_blank" class="hover:text-cyan-400 transition">
+          <a href="mailto: inquiry@the.jayprasad.com.np" target="_blank" class="hover:text-cyan-400 transition">
             <i class="fas fa-envelope text-xl"></i>
           </a>
         </li>
