--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://jayprasadmajhi.com/" />
+    <meta property="og:url" content="https://jayprasad.com.np/" />
     <meta property="og:title" content="Jay Prasad Majhi – AI & Cybersecurity Expert" />
     <meta property="og:description" content="AI Developer, Cybersecurity Specialist & IT Consultant with 900M+ AI database expertise." />
     <meta property="og:image" content="assets/images/name-logo.svg" />
